fix: resolve avatar size and layout issue

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -5,7 +5,8 @@
 
 $btn-border-width: 3px;
 $btn-mb: 0.5rem;
-$sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
+$sidebar-display: 'sidebar-display';
+/* the attribute for sidebar display */
 
 #sidebar {
   @include mx.pl-pr(0);
@@ -20,8 +21,10 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
   border-right: 1px solid var(--sidebar-border-color);
 
   /* Hide scrollbar for IE, Edge and Firefox */
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
@@ -31,7 +34,8 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
   @include bp.lt(bp.get(lg)) {
     @include mx.slide;
 
-    transform: translateX(-#{v.$sidebar-width}); /* hide */
+    transform: translateX(-#{v.$sidebar-width});
+    /* hide */
     -webkit-transform: translateX(-#{v.$sidebar-width});
 
     [#{$sidebar-display}] & {
@@ -59,7 +63,8 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
     height: 6.5rem;
     overflow: hidden;
     box-shadow: var(--avatar-border-color) 0 0 0 2px;
-    transform: translateZ(0); /* fixed the zoom in Safari */
+    transform: translateZ(0);
+    /* fixed the zoom in Safari */
 
     @include bp.sm {
       width: 7rem;
@@ -67,6 +72,9 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
     }
 
     img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
       transition: transform 0.5s;
 
       &:hover {
@@ -246,8 +254,12 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
         @include mx.ml-mr(calc((v.$sb-btn-gap-lg - $btn-border-width) / 2));
       }
     }
-  } /* .sidebar-bottom */
-} /* #sidebar */
+  }
+
+  /* .sidebar-bottom */
+}
+
+/* #sidebar */
 
 [#{$sidebar-display}] {
   #main-wrapper {
